--- a/recipes/shrimp-scampi.html
+++ b/recipes/shrimp-scampi.html
@@ -1,1 +1,40 @@
-<h1>Shrimp Scampi</h1>
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <title>Shrimp Scampi</title>
+</head>
+<body>
+  <h1>Shrimp Scampi</h1>
+  <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F6247347.jpg&w=937&h=937&c=sc&poi=face&q=85" alt="Shrimp Scampi">
+  <h3>Description</h3>
+  <p>Shrimp scampi is a wonderful pasta dish that includes the use of some type of pasta along with different types of shrimp. Usually, large shrimp are used for the dish although it is possible to make use of smaller or popcorn shrimp in the recipe. Along with the pasta and shrimp, the preparation of shrimp scampi generally includes such ingredients as butter, white wine and garlic. </p>
+
+  <h3>Ingredients</h3>
+  <ul>
+    <li>1 (16 ounce) package linguine pasta </li>
+    <li>2 tablespoons butter </li>
+    <li>2 tablespoons extra-virgin olive oil </li>
+    <li>2 shallots, finely diced </li>
+    <li>2 cloves garlic, minced </li>
+    <li>1 pinch red pepper flakes (Optional)</li>
+    <li>1 pound shrimp, peeled and deveined </li>
+    <li>1 pinch kosher salt and freshly ground pepper</li>
+    <li>½ cup dry white wine </li>
+    <li>1 lemon, juiced</li>
+    <li>2 tablespoons butter </li>
+    <li>2 tablespoons extra-virgin olive oil </li>
+    <li>¼ cup finely chopped fresh parsley leaves </li>
+    <li>1 teaspoon extra-virgin olive oil, or to taste </li>
+  </ul>
+
+  <h3>Steps</h3>
+  <ol>
+    <l1>Bring a large pot of salted water to a boil; cook linguine in boiling water until nearly tender, 6 to 8 minutes. Drain.</l1>
+    <l1>Melt 2 tablespoons butter with 2 tablespoons olive oil in a large skillet over medium heat. Cook and stir shallots, garlic, and red pepper flakes in the hot butter and oil until shallots are translucent, 3 to 4 minutes. Season shrimp with kosher salt and black pepper; add to the skillet and cook until pink, stirring occasionally, 2 to 3 minutes. Remove shrimp from skillet and keep warm.
+</l1>
+    <l1>Pour white wine and lemon juice into skillet and bring to a boil while scraping the browned bits of food off of the bottom of the skillet with a wooden spoon. Melt 2 tablespoons butter in skillet, stir 2 tablespoons olive oil into butter mixture, and bring to a simmer. Toss linguine, shrimp, and parsley in the butter mixture until coated; season with salt and black pepper. Drizzle with 1 teaspoon olive oil to serve.
+</l1>
+  </ol>
+
+</body>
+</html>
