--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/shrimp-scampi.html">Shrimp Scampi</a>
+    <ul>
+      <li><a href="./recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
+      <li><a href="./recipes/baked-salmon.html">Baked Salmon</a></li>
+      <li></li>
+    </ul>
   </body>
 </html>
