--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="./recipes/shrimp-scampi.html">Shrimp Scampi</a></li>
       <li><a href="./recipes/baked-salmon.html">Baked Salmon</a></li>
-      <li></li>
+      <li><a href="./recipes/beef-bourguignon.html">Beef Bourguignon</a></li>
     </ul>
   </body>
 </html>
