--- a/recipes/baked-salmon.html
+++ b/recipes/baked-salmon.html
@@ -23,7 +23,7 @@
 
   <h3>Steps</h3>
   <ol>
-    <li>n a medium glass bowl, prepare marinade by mixing garlic, light olive oil, basil, salt, pepper, lemon juice and parsley. Place salmon fillets in a medium glass baking dish, and cover with the marinade. Marinate in the refrigerator about 1 hour, turning occasionally.</li>
+    <li>In a medium glass bowl, prepare marinade by mixing garlic, light olive oil, basil, salt, pepper, lemon juice and parsley. Place salmon fillets in a medium glass baking dish, and cover with the marinade. Marinate in the refrigerator about 1 hour, turning occasionally.</li>
     <li>Preheat oven to 375 degrees F (190 degrees C).
 </li>
     <li>Place fillets in aluminum foil, cover with marinade, and seal. Place sealed salmon in the glass dish, and bake 35 to 45 minutes, until easily flaked with a fork.
